k8s/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: fastapi-web
spec:
  replicas: 2 # This is the automation! It will always keep 2 copies running.
  selector:
    matchLabels:
      app: fastapi-web
  template:
    metadata:
      labels:
        app: fastapi-web
    spec:
      containers:
      - name: fastapi-container
        image: rexx0924/my-fastapi-app:v1 # Your pushed image
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m" # 1/10th of a core
            memory: "128Mi"
          limits:
            cpu: "500m" # Half a core max
            memory: "256Mi"
